--- a/CTe.Dacte.Fast/CTe.Dacte.Fast.csproj
+++ b/CTe.Dacte.Fast/CTe.Dacte.Fast.csproj
@@ -1,92 +1,82 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1D58CBBD-56A5-4A10-8DAB-F795D35150EE}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CTe.Dacte.Fast</RootNamespace>
-    <AssemblyName>CTe.Dacte.Fast</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="FastReport, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Dlls\FastReport.dll</HintPath>
-    </Reference>
-    <Reference Include="FastReport.Bars, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Dlls\FastReport.Bars.dll</HintPath>
-    </Reference>
-    <Reference Include="FastReport.Editor, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Dlls\FastReport.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DacteFrCte.cs" />
-    <Compile Include="DacteFrEvento.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CTe.Classes\CTe.Classes.csproj">
-      <Project>{c86e3921-f0b8-4bfe-9ef1-0e9084326b13}</Project>
-      <Name>CTe.Classes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CTe.Dacte.Base\CTe.Dacte.Base.csproj">
-      <Project>{e46eca77-8732-4d99-9460-fa5e2cd90266}</Project>
-      <Name>CTe.Dacte.Base</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\CTeEvento.frx" />
-    <None Include="Resources\CTeRetrato.frx" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+<!-- Definição das versões compátiveis Standard 2.0 e .net 4.5 -->
+<PropertyGroup>
+  <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+  <AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
+  <ApplicationIcon />
+  <Win32Resource />
+  <DependsOnSystemRuntime>true</DependsOnSystemRuntime>
+  <_HasReferenceToSystemRuntime>true</_HasReferenceToSystemRuntime>
+  <AssemblyName>CTe.Dacte.Fast</AssemblyName>
+</PropertyGroup>
+
+<!-- Referências comuns do pacote NuGet que afetam todos os projetos-->
+
+
+<!-- Sinalizadores de compilação e opções de compilação -->
+<PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
+  <DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+</PropertyGroup>
+
+<PropertyGroup Condition=" '$(TargetFramework)' == 'net45'">
+  <DefineConstants>NET45;NETFULL</DefineConstants>
+</PropertyGroup>
+
+<!-- .NET 4.5 / .NET Standard referências -->
+<ItemGroup Condition=" '$(TargetFramework)' != 'net45'">
+  <PackageReference Include="Microsoft.Build.Framework" Version="15.7.179" />
+  <PackageReference Include="CoreCompat.System.Drawing.v2">
+    <Version>5.2.0-preview1-r131</Version>
+  </PackageReference>
+  <PackageReference Include="FastReport.OpenSource" Version="2018.4.9" />
+</ItemGroup>
+
+<ItemGroup Condition="'$(TargetFramework)' == 'net45'">
+  <Reference Include="FastReport, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
+    <SpecificVersion>False</SpecificVersion>
+    <HintPath>Dlls\FastReport.dll</HintPath>
+  </Reference>
+  <Reference Include="FastReport.Bars, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
+    <SpecificVersion>False</SpecificVersion>
+    <HintPath>Dlls\FastReport.Bars.dll</HintPath>
+  </Reference>
+  <Reference Include="FastReport.Editor, Version=2017.4.1.0, Culture=neutral, PublicKeyToken=db7e5ce63278458c, processorArchitecture=MSIL">
+    <SpecificVersion>False</SpecificVersion>
+    <HintPath>Dlls\FastReport.Editor.dll</HintPath>
+  </Reference>
+  <Reference Include="System" />
+  <Reference Include="System.Core" />
+  <Reference Include="System.Drawing" />
+  <Reference Include="System.Windows.Forms" />
+  <Reference Include="System.Xml.Linq" />
+  <Reference Include="System.Data.DataSetExtensions" />
+  <Reference Include="Microsoft.CSharp" />
+  <Reference Include="System.Data" />
+  <Reference Include="System.Net.Http" />
+  <Reference Include="System.Xml" />
+</ItemGroup>
+
+<!-- Referências dos projetos -->
+
+<!-- Referências aos arquivos -->
+<ItemGroup>
+  <ProjectReference Include="..\CTe.Classes\CTe.Classes.csproj">
+    <Project>{c86e3921-f0b8-4bfe-9ef1-0e9084326b13}</Project>
+    <Name>CTe.Classes</Name>
+  </ProjectReference>
+  <ProjectReference Include="..\CTe.Dacte.Base\CTe.Dacte.Base.csproj">
+    <Project>{e46eca77-8732-4d99-9460-fa5e2cd90266}</Project>
+    <Name>CTe.Dacte.Base</Name>
+  </ProjectReference>
+</ItemGroup>
+<ItemGroup>
+  <None Include="Resources\CTeEvento.frx" />
+  <None Include="Resources\CTeRetrato.frx" />
+</ItemGroup>
+
+<PropertyGroup>
+  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+</PropertyGroup>
+
 </Project>
