--- a/CTe.Servicos/CTe.Servicos.csproj
+++ b/CTe.Servicos/CTe.Servicos.csproj
@@ -1,103 +1,50 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <!-- Definição das versões compátiveis Standard 2.0 e .net 4.5 -->
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{63227402-2B1E-4BC7-A6DF-362129923CF6}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CTe.Servicos</RootNamespace>
-    <AssemblyName>CTe.Servicos</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
+  
+  <!-- Referências comuns do pacote NuGet que afetam todos os projetos-->
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+  
+  <!-- Sinalizadores de compilação e opções de compilação -->
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
+    <DefineConstants>NETCORE;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net45'">
+    <DefineConstants>NET45;NETFULL</DefineConstants>
+  </PropertyGroup>
+  
+  <!-- .NET 4.5 / .NET Standard referências -->
+  <ItemGroup Condition=" '$(TargetFramework)' != 'net45'">
+    <PackageReference Include="Microsoft.Build.Framework" Version="15.7.179" />
+  </ItemGroup>
+  
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Services" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Web.Services" />
   </ItemGroup>
+  
   <ItemGroup>
-    <Compile Include="ConsultaProtocolo\ConsultaProtcoloServico.cs" />
-    <Compile Include="ConsultaRecibo\ConsultaReciboServico.cs" />
-    <Compile Include="ConsultaStatus\StatusServico.cs" />
-    <Compile Include="DistribuicaoDFe\RetornoCteDistDFeInt.cs" />
-    <Compile Include="DistribuicaoDFe\ServicoCTeDistribuicaoDFe.cs" />
-    <Compile Include="Enderecos\Helpers\UrlHelper.cs" />
-    <Compile Include="Enderecos\UrlCTe.cs" />
-    <Compile Include="EnviarCte\RetornoEnviarCte.cs" />
-    <Compile Include="EnviarCte\ServicoEnviarCte.cs" />
-    <Compile Include="Eventos\Contratos\IServicoController.cs" />
-    <Compile Include="Eventos\EventoDesacordo.cs" />
-    <Compile Include="Eventos\EventoCancelamento.cs" />
-    <Compile Include="Eventos\EventoCartaCorrecao.cs" />
-    <Compile Include="Eventos\FactoryEvento.cs" />
-    <Compile Include="Eventos\ServicoController.cs" />
-    <Compile Include="Factory\ClassesFactory.cs" />
-    <Compile Include="Factory\WsdlFactory.cs" />
-    <Compile Include="Inutilizacao\InutilizacaoServico.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Recepcao\AntesEnviarRecepcao.cs" />
-    <Compile Include="Recepcao\ServicoCTeRecepcao.cs" />
+    <ProjectReference Include="..\CTe.Classes\CTe.Classes.csproj" />
+    <ProjectReference Include="..\CTe.Utils\CTe.Utils.csproj" />
+    <ProjectReference Include="..\CTe.Wsdl\CTe.Wsdl.csproj" />
+    <ProjectReference Include="..\DFe.Classes\DFe.Classes.csproj" />
+    <ProjectReference Include="..\DFe.Utils\DFe.Utils.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CTe.Classes\CTe.Classes.csproj">
-      <Project>{C86E3921-F0B8-4BFE-9EF1-0E9084326B13}</Project>
-      <Name>CTe.Classes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CTe.Utils\CTe.Utils.csproj">
-      <Project>{21a894ec-b79e-4936-bff3-abead2e5c44f}</Project>
-      <Name>CTe.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\CTe.Wsdl\CTe.Wsdl.csproj">
-      <Project>{9CC914F9-4C3E-43BB-A34B-A12AE4923548}</Project>
-      <Name>CTe.Wsdl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DFe.Classes\DFe.Classes.csproj">
-      <Project>{9984EC15-18E1-4A87-B4DB-18AC913DC4E8}</Project>
-      <Name>DFe.Classes</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DFe.Utils\DFe.Utils.csproj">
-      <Project>{B4E1A7A6-5D66-4326-8A8D-39338E6FC84C}</Project>
-      <Name>DFe.Utils</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  
+  <PropertyGroup>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  </PropertyGroup>
 </Project>
